# serializer version: 1
# name: test_random_size1d
  dict({
    '&@?': 100.0,
  })
# ---
# name: test_random_size1u
  dict({
    '@': 100.0,
  })
# ---
# name: test_random_size2d
  dict({
    '&AG': 99.53188999414863,
    '&AW': 0.4681100058513751,
  })
# ---
# name: test_random_size2u
  dict({
    'A_': 100.0,
  })
# ---
# name: test_random_size3d
  dict({
    '&B?o': 23.025689819219792,
    '&B@o': 1.2940057088487156,
    '&BCO': 50.12369172216936,
    '&BC_': 23.61560418648906,
    '&BCo': 0.21883920076117983,
    '&BDo': 0.019029495718363463,
    '&BHo': 0.038058991436726926,
    '&BP_': 0.10466222645099905,
    '&BPo': 0.009514747859181731,
    '&BS_': 1.5509039010466223,
  })
# ---
# name: test_random_size3u
  dict({
    'BW': 99.69427209783292,
    'Bw': 0.3057279021670713,
  })
# ---
# name: test_random_size4d
  dict({
    '&C??w': 5.721191999941754,
    '&C?@o': 18.514878157103436,
    '&C?@w': 1.0258538467699072,
    '&C?Cg': 10.088897625756285,
    '&C?Go': 9.853730278342034,
    '&C?Gw': 0.186386504452162,
    '&C?HW': 0.1295968663768939,
    '&C?Hw': 0.045140481547007984,
    '&C?Kg': 0.21696554033884485,
    '&C?Ko': 0.008008795113178837,
    '&C?Kw': 0.0007280722830162579,
    '&C?Lw': 0.0007280722830162579,
    '&C?Po': 2.3392962453312367,
    '&C?Pw': 0.06625457775447946,
    '&C?So': 0.42373806871546205,
    '&C?Wo': 0.22060590175392614,
    '&C?Xw': 0.0029122891320650314,
    '&C?`o': 0.20822867294264974,
    '&C?`w': 0.01965795164143896,
    '&C?co': 0.31889565996112096,
    '&C?dg': 0.012377228811276383,
    '&C?do': 0.0029122891320650314,
    '&C?gG': 19.183976585195378,
    '&C?gO': 10.949479064281501,
    '&C?g_': 10.680092319565487,
    '&C?go': 0.03858783099986167,
    '&C?hW': 0.0021842168490487737,
    '&C?hg': 0.054605421226219336,
    '&C?ho': 0.005096505981113805,
    '&C?hw': 0.0014561445660325157,
    '&C?kg': 0.015289517943341414,
    '&C?ko': 0.0007280722830162579,
    '&CA@W': 0.2329831305652025,
    '&CA@o': 0.1951233718483571,
    '&CA@w': 0.014561445660325157,
    '&CACW': 0.11066698701847119,
    '&CACo': 0.21041288979169853,
    '&CACw': 0.0007280722830162579,
    '&CADW': 0.0014561445660325157,
    '&CAGW': 0.025482529905569026,
    '&CAG_': 6.388106211184646,
    '&CAGo': 0.11794770984863377,
    '&CAGw': 0.0007280722830162579,
    '&CAHg': 0.0014561445660325157,
    '&CAKW': 0.0014561445660325157,
    '&CAKg': 0.0021842168490487737,
    '&CAKo': 0.0007280722830162579,
    '&CAko': 0.0007280722830162579,
    '&CCPo': 0.07863180656575584,
    '&CCPw': 0.0007280722830162579,
    '&CCWo': 0.01965795164143896,
    '&CEGo': 0.004368433698097547,
    '&CGPo': 0.013105301094292641,
    '&CGWo': 0.004368433698097547,
    '&CG`o': 0.0021842168490487737,
    '&CGgo': 0.0021842168490487737,
    '&CIGo': 0.0029122891320650314,
    '&COPo': 0.02329831305652025,
    '&COPw': 0.0014561445660325157,
    '&COWo': 0.0029122891320650314,
    '&CO`_': 0.012377228811276383,
    '&CO`o': 0.0029122891320650314,
    '&CO`w': 0.0007280722830162579,
    '&COcG': 0.3108868648479421,
    '&COcO': 1.2857756518067114,
    '&COc_': 0.3436501175836737,
    '&COg_': 0.24171999796139762,
    '&COgo': 0.0029122891320650314,
  })
# ---
# name: test_random_size4u
  dict({
    'CF': 60.369053326940495,
    'CN': 1.278568003835704,
    'CR': 38.27712961483139,
    'C^': 0.009322891694635342,
    'Cr': 0.06526024186244739,
    'C~': 0.0006659208353310958,
  })
# ---
# name: test_random_size5d
  dict({
    '&D???N?': 1.515474296552601,
    '&D???]?': 6.885649638698283,
    '&D???^?': 0.5141204888826276,
    '&D??@L?': 2.5648040930347626,
    '&D??@\\?': 0.07305922736753129,
    '&D??BH?': 2.587095532778295,
    '&D??CM?': 2.561067377702032,
    '&D??CN?': 0.12064865942116132,
    '&D??C]?': 0.1407496108661964,
    '&D??C^?': 0.03221306321319722,
    '&D??DL?': 0.08237954032388302,
    '&D??EI?': 0.6833034968783395,
    '&D??EM?': 0.007859987424020122,
    '&D??EN?': 0.0011596702756751,
    '&D??EZ?': 0.0072157261597561775,
    '&D??E^?': 0.0013314732794788185,
    '&D??FL?': 0.0004724582604602259,
    '&D??G[?': 11.100449780263958,
    '&D??G]?': 1.776614862334253,
    '&D??G^?': 0.05188450714872299,
    '&D??HK?': 2.761690335393824,
    '&D??HM?': 0.159905645790311,
    '&D??HN?': 0.01486095982902165,
    '&D??H\\?': 0.00012885225285278888,
    '&D??IZ?': 0.00910555920159708,
    '&D??JJ?': 0.0046386811027004,
    '&D??KM?': 0.2741546433197838,
    '&D??K\\?': 0.07636643519075287,
    '&D??K]?': 0.024696681796784536,
    '&D??K^?': 0.004810484106504118,
    '&D??LL?': 0.006657366397394092,
    '&D??LM?': 0.00012885225285278888,
    '&D??MJ?': 0.0035219615779762295,
    '&D??ML?': 0.0012455717775769592,
    '&D??MM?': 0.00038655675855836665,
    '&D??MN?': 0.00012885225285278888,
    '&D??M^?': 8.590150190185926e-05,
    '&D??O]?': 0.09865787493428535,
    '&D??PM?': 0.07795561297593727,
    '&D??P[?': 0.03521961577976229,
    '&D??P\\?': 0.002190488298497411,
    '&D??P]?': 0.00025770450570557777,
    '&D??QI?': 1.4973490796513087,
    '&D??QX?': 0.20367246100930828,
    '&D??QY?': 0.0993021361985493,
    '&D??QZ?': 0.0034790108270252996,
    '&D??RH?': 0.3024162374454955,
    '&D??RI?': 0.06631595946823535,
    '&D??SM?': 0.01842587215794881,
    '&D??S[?': 0.0810480670444042,
    '&D??S\\?': 0.022549144249238054,
    '&D??S]?': 0.004252124344142033,
    '&D??S^?': 0.0023193405513502,
    '&D??TK?': 0.02542684456295034,
    '&D??TL?': 0.004037370589387385,
    '&D??TM?': 0.0005154090114111555,
    '&D??T\\?': 0.0005154090114111555,
    '&D??UB?': 0.04033075514292292,
    '&D??UH?': 0.29550116654239583,
    '&D??UI?': 0.015591122595187454,
    '&D??UJ?': 0.00021475375475464814,
    '&D??UK?': 0.007945888925921981,
    '&D??UL?': 0.00038655675855836665,
    '&D??UZ?': 0.00025770450570557777,
    '&D??U\\?': 0.0015891777851843962,
    '&D??U]?': 8.590150190185926e-05,
    '&D??U^?': 4.295075095092963e-05,
    '&D??X[?': 4.295075095092963e-05,
    '&D??[[?': 0.00038655675855836665,
    '&D??\\D?': 0.0005154090114111555,
    '&D??\\E?': 0.0004295075095092963,
    '&D?@?Y?': 5.468317808068556,
    '&D?@?Z?': 0.27741890039205447,
    '&D?@@I?': 5.497438417213287,
    '&D?@@J?': 0.04084616415433408,
    '&D?@@Z?': 0.002662946558957637,
    '&D?@AI?': 1.4717074813336037,
    '&D?@AJ?': 0.011596702756750999,
    '&D?@BJ?': 0.0008590150190185926,
    '&D?@CI?': 1.4150554408293274,
    '&D?@CM?': 0.02147537547546481,
    '&D?@CZ?': 0.006013105133130148,
    '&D?@DJ?': 0.00025770450570557777,
    '&D?@EJ?': 0.00025770450570557777,
    '&D?@K]?': 0.0005154090114111555,
    '&D?@S]?': 8.590150190185926e-05,
    '&D?A?[?': 5.468317808068556,
    '&D?A?]?': 0.26912940545852504,
    '&D?A?^?': 0.023451110019207577,
    '&D?A@K?': 1.5141428232731222,
    '&D?A@M?': 0.08199298356532465,
    '&D?A@N?': 0.0012026210266260296,
    '&D?A@]?': 0.0023193405513502,
    '&D?AAB?': 0.7270703120973367,
    '&D?AAJ?': 0.02284979950589456,
    '&D?AAK?': 0.6834752998821432,
    '&D?AAN?': 0.0007301627661658037,
    '&D?AAR?': 0.031096343688473048,
    '&D?AAZ?': 0.0007731135171167333,
    '&D?AA\\?': 0.00575540062742457,
    '&D?AA]?': 0.0018898330418409036,
    '&D?AA^?': 0.0005154090114111555,
    '&D?ABB?': 0.05875662730087173,
    '&D?ABD?': 0.029464215152337724,
    '&D?ABE?': 0.006700317148345022,
    '&D?ABH?': 0.013443585047640974,
    '&D?ABL?': 0.00012885225285278888,
    '&D?ABM?': 0.00012885225285278888,
    '&D?ABV?': 8.590150190185926e-05,
    '&D?ACK?': 2.8387869333507427,
    '&D?ACM?': 0.0682916940119781,
    '&D?ACN?': 0.0011596702756751,
    '&D?ACT?': 0.023322257766354788,
    '&D?AC\\?': 0.002662946558957637,
    '&D?AC]?': 0.002405242053252059,
    '&D?ADD?': 0.023537011521109433,
    '&D?ADE?': 0.025985204325312424,
    '&D?ADL?': 0.001030818022822311,
    '&D?ADM?': 0.0008590150190185926,
    '&D?AEB?': 0.017953413897488585,
    '&D?AED?': 0.029249461397583075,
    '&D?AEE?': 0.004939336359356907,
    '&D?AEH?': 0.07065398531427923,
    '&D?AEI?': 0.013271782043837254,
    '&D?AEJ?': 0.0005583597623620852,
    '&D?AEK?': 0.007086873906903388,
    '&D?AEL?': 0.0005154090114111555,
    '&D?AEM?': 0.00025770450570557777,
    '&D?AEN?': 4.295075095092963e-05,
    '&D?AE\\?': 8.590150190185926e-05,
    '&D?AI[?': 0.0009878672718713814,
    '&D?AJJ?': 0.000343606007607437,
    '&D?AK[?': 0.0011167195247241703,
    '&D?AK]?': 0.0012026210266260296,
    '&D?ALM?': 0.00012885225285278888,
    '&D?AQ[?': 0.0003006552566565074,
    '&D?ARH?': 0.0004295075095092963,
    '&D?AST?': 0.0009449165209204518,
    '&D?ASU?': 0.001846882290889974,
    '&D?AS[?': 0.0012455717775769592,
    '&D?ATE?': 0.0068721201521487404,
    '&D?ATK?': 4.295075095092963e-05,
    '&D?AUK?': 0.00021475375475464814,
    '&D?AU\\?': 4.295075095092963e-05,
    '&D?CG[?': 1.9387968979249632,
    '&D?CG]?': 0.12013325040975016,
    '&D?CG^?': 0.0012026210266260296,
    '&D?CIM?': 0.019156034924114614,
    '&D?CJH?': 0.0017180300380371851,
    '&D?CKM?': 0.009449165209204517,
    '&D?CKV?': 0.00012885225285278888,
    '&D?CK\\?': 0.005411794619817133,
    '&D?CK]?': 0.0008160642680676629,
    '&D?CK^?': 8.590150190185926e-05,
    '&D?CLD?': 0.005583597623620851,
    '&D?CLL?': 0.0006013105133130148,
    '&D?CMD?': 0.005497696121718992,
    '&D?CMF?': 0.000343606007607437,
    '&D?CMH?': 0.007301627661658036,
    '&D?CMM?': 4.295075095092963e-05,
    '&D?CO[?': 0.32900275228412096,
    '&D?CS\\?': 0.001030818022822311,
    '&D?CTD?': 0.0007731135171167333,
    '&D?CUD?': 0.000687212015214874,
    '&D?CUF?': 0.00012885225285278888,
    '&D?D?[?': 0.41241311063082625,
    '&D?D@K?': 0.07065398531427923,
    '&D?DAK?': 0.13666928952585808,
    '&D?DAM?': 0.006958021654050599,
    '&D?DC\\?': 8.590150190185926e-05,
    '&D?E?[?': 0.30830049032577284,
    '&D?E@K?': 0.025641598317704985,
    '&D?EAE?': 0.05063893537114603,
    '&D?EAK?': 0.03981534613151176,
    '&D?EAM?': 0.001846882290889974,
    '&D?ECK?': 0.04355206146424264,
    '&D?EC\\?': 0.0001718030038037185,
    '&D?EK]?': 8.590150190185926e-05,
    '&D?GG]?': 0.017566857138930216,
    '&D?GIM?': 0.007344578412608966,
    '&D?GJH?': 0.006099006635032007,
    '&D?GKE?': 0.02847634788046634,
    '&D?GKM?': 0.0009878672718713814,
    '&D?GKR?': 0.007129824657854318,
    '&D?GKT?': 0.004123272091289244,
    '&D?GKV?': 0.00025770450570557777,
    '&D?GKX?': 0.016235383859451398,
    '&D?GK\\?': 0.0027058973099085663,
    '&D?GK]?': 0.00025770450570557777,
    '&D?GK^?': 0.0001718030038037185,
    '&D?GLD?': 0.0008160642680676629,
    '&D?GLH?': 0.0044239273479457514,
    '&D?GLK?': 8.590150190185926e-05,
    '&D?GLL?': 4.295075095092963e-05,
    '&D?GME?': 0.0014173747813806777,
    '&D?GMH?': 0.003951469087485526,
    '&D?GMK?': 0.000343606007607437,
    '&D?GO]?': 0.002662946558957637,
    '&D?GQM?': 0.0017609807889881147,
    '&D?GQX?': 0.013916043308101199,
    '&D?GRH?': 0.011081293745339843,
    '&D?GRK?': 0.0030495033175160034,
    '&D?GSE?': 0.013615388051444691,
    '&D?GSM?': 8.590150190185926e-05,
    '&D?GST?': 0.0007731135171167333,
    '&D?GSX?': 0.0424782926904694,
    '&D?GS\\?': 0.0005154090114111555,
    '&D?GS]?': 0.00012885225285278888,
    '&D?GTD?': 0.004295075095092963,
    '&D?GUE?': 0.0009878672718713814,
    '&D?GUH?': 0.02637176108387079,
    '&D?GUI?': 0.0008590150190185926,
    '&D?GUK?': 0.0004295075095092963,
    '&D?GUM?': 4.295075095092963e-05,
    '&D?HAM?': 0.0004724582604602259,
    '&D?HC\\?': 0.000343606007607437,
    '&D?IAE?': 0.038741577357738526,
    '&D?IAM?': 0.0006013105133130148,
    '&D?IC\\?': 8.590150190185926e-05,
    '&D?OG[?': 0.2306455326064921,
    '&D?OG]?': 0.03676584281399576,
    '&D?OG^?': 0.0023193405513502,
    '&D?OHK?': 0.11257391824238655,
    '&D?OIK?': 0.12528734052386173,
    '&D?OIM?': 0.0046386811027004,
    '&D?OJH?': 0.000343606007607437,
    '&D?OKF?': 0.002619995808006707,
    '&D?OKK?': 0.022720947253041773,
    '&D?OKM?': 0.0023622913023011293,
    '&D?OKN?': 0.00021475375475464814,
    '&D?OK\\?': 0.0004295075095092963,
    '&D?OK]?': 0.0001718030038037185,
    '&D?OLB?': 0.001030818022822311,
    '&D?OLD?': 0.0018039315399390444,
    '&D?OLH?': 0.0019327837927918333,
    '&D?OLL?': 0.00021475375475464814,
    '&D?OMD?': 0.0016750792870862555,
    '&D?OMF?': 0.00021475375475464814,
    '&D?OMH?': 0.0005583597623620852,
    '&D?OML?': 4.295075095092963e-05,
    '&D?OO[?': 0.024782583298686395,
    '&D?OO]?': 0.004037370589387385,
    '&D?OO^?': 0.0011167195247241703,
    '&D?OPK?': 0.04076026265243222,
    '&D?OPX?': 0.000687212015214874,
    '&D?OQK?': 0.026672416340527298,
    '&D?OQM?': 0.00227638980039927,
    '&D?OQX?': 0.0012885225285278888,
    '&D?ORH?': 0.0029206510646632147,
    '&D?ORI?': 0.0005154090114111555,
    '&D?OS@?': 5.888633856874353,
    '&D?OSA?': 2.7626782026656955,
    '&D?OSC?': 1.635607546962351,
    '&D?OSE?': 0.01494686133092351,
    '&D?OSG?': 1.5989276056502573,
    '&D?OSK?': 0.006013105133130148,
    '&D?OSM?': 8.590150190185926e-05,
    '&D?OSR?': 0.0005154090114111555,
    '&D?OSV?': 0.00012885225285278888,
    '&D?OSX?': 0.007129824657854318,
    '&D?OS^?': 8.590150190185926e-05,
    '&D?OTD?': 0.0007301627661658037,
    '&D?OTE?': 0.0003006552566565074,
    '&D?OTH?': 0.0021045867965955515,
    '&D?OTI?': 0.0005154090114111555,
    '&D?OTK?': 0.0001718030038037185,
    '&D?OUB?': 0.001030818022822311,
    '&D?OUD?': 0.002963601815614144,
    '&D?OUE?': 0.0013314732794788185,
    '&D?OUH?': 0.0013314732794788185,
    '&D?OUI?': 0.000343606007607437,
    '&D?OUK?': 0.000343606007607437,
    '&D?O]H?': 4.295075095092963e-05,
    '&D?P?[?': 0.1649738344025207,
    '&D?P@K?': 0.0984431211795307,
    '&D?PAK?': 0.3576079524174401,
    '&D?PCK?': 0.03496191127405671,
    '&D?PCT?': 0.00025770450570557777,
    '&D?PC\\?': 0.0001718030038037185,
    '&D?PDD?': 0.0009019657699695222,
    '&D?PDL?': 8.590150190185926e-05,
    '&D?PED?': 0.0006013105133130148,
    '&D?PEH?': 0.0007731135171167333,
    '&D?PEI?': 0.00012885225285278888,
    '&D?PEK?': 0.00025770450570557777,
    '&D?PSY?': 8.590150190185926e-05,
    '&D?Q?V?': 0.0024481928042029886,
    '&D?Q?[?': 0.018898330418409034,
    '&D?Q?^?': 8.590150190185926e-05,
    '&D?Q@F?': 0.00021475375475464814,
    '&D?Q@K?': 0.015677024097089313,
    '&D?QAE?': 0.05278647291869251,
    '&D?QAF?': 0.00012885225285278888,
    '&D?QAK?': 0.014646206074267002,
    '&D?QBD?': 0.00025770450570557777,
    '&D?QCF?': 8.590150190185926e-05,
    '&D?QCK?': 0.019757345437427628,
    '&D?QDD?': 0.0001718030038037185,
    '&D?QED?': 0.000343606007607437,
    '&D?QK]?': 4.295075095092963e-05,
    '&D?QS[?': 4.295075095092963e-05,
    '&D?QTE?': 8.590150190185926e-05,
    '&D?QTH?': 0.00025770450570557777,
    '&D?QTI?': 0.0013314732794788185,
    '&D?QUB?': 8.590150190185926e-05,
    '&D?QUD?': 8.590150190185926e-05,
    '&D?QUE?': 4.295075095092963e-05,
    '&D?QUH?': 8.590150190185926e-05,
    '&D?RDH?': 0.00012885225285278888,
    '&D?RDI?': 0.00012885225285278888,
    '&D?REH?': 4.295075095092963e-05,
    '&D@?GU?': 0.3152155612288725,
    '&D@?GV?': 0.00936326370730266,
    '&D@?G[?': 0.14023420185478522,
    '&D@?G]?': 0.026071105827214284,
    '&D@?G^?': 0.0008160642680676629,
    '&D@?IE?': 0.07808446522879006,
    '&D@?IM?': 0.0033931093251234404,
    '&D@?IV?': 0.0001718030038037185,
    '&D@?I]?': 0.0001718030038037185,
    '&D@?JB?': 0.0001718030038037185,
    '&D@?JD?': 0.0009449165209204518,
    '&D@?JH?': 0.00021475375475464814,
    '&D@?KE?': 0.02993667341279795,
    '&D@?KM?': 0.004853434857455048,
    '&D@?K]?': 0.00025770450570557777,
    '&D@?LB?': 8.590150190185926e-05,
    '&D@?LD?': 0.00021475375475464814,
    '&D@?LH?': 0.002190488298497411,
    '&D@?LL?': 8.590150190185926e-05,
    '&D@?MB?': 8.590150190185926e-05,
    '&D@?MD?': 0.0007301627661658037,
    '&D@?MH?': 0.0007301627661658037,
    '&D@?OU?': 0.023451110019207577,
    '&D@?O[?': 0.02512618930629383,
    '&D@?O]?': 0.0006013105133130148,
    '&D@?PT?': 0.0011167195247241703,
    '&D@?PX?': 0.0005583597623620852,
    '&D@?QE?': 0.017824561644635795,
    '&D@?QM?': 0.0004295075095092963,
    '&D@?QR?': 0.0001718030038037185,
    '&D@?QT?': 0.0031783555703687925,
    '&D@?QV?': 8.590150190185926e-05,
    '&D@?Q]?': 8.590150190185926e-05,
    '&D@?RD?': 0.0036078630798780887,
    '&D@?RE?': 0.0005583597623620852,
    '&D@?RH?': 0.00025770450570557777,
    '&D@?RI?': 0.00012885225285278888,
    '&D@?RK?': 0.0001718030038037185,
    '&D@?S@?': 2.7744896591772013,
    '&D@?SC?': 0.8200157371551484,
    '&D@?SE?': 0.006056055884081077,
    '&D@?SG?': 3.0628610010617425,
    '&D@?SM?': 0.0001718030038037185,
    '&D@?SX?': 0.0031783555703687925,
    '&D@?S]?': 8.590150190185926e-05,
    '&D@?TD?': 0.0010737687737732407,
    '&D@?TE?': 0.0003006552566565074,
    '&D@?TH?': 0.004724582604602259,
    '&D@?TI?': 0.0005154090114111555,
    '&D@?TK?': 4.295075095092963e-05,
    '&D@?UB?': 0.00038655675855836665,
    '&D@?UD?': 0.0024911435551539184,
    '&D@?UE?': 0.000343606007607437,
    '&D@?UH?': 0.002534094306104848,
    '&D@?UI?': 4.295075095092963e-05,
    '&D@?UK?': 0.0007301627661658037,
    '&D@@?U?': 0.045313042253230754,
    '&D@@?[?': 0.08134872230106072,
    '&D@@?]?': 0.0012455717775769592,
    '&D@@@K?': 0.026801268593380088,
    '&D@@@R?': 4.295075095092963e-05,
    '&D@@AC?': 7.558043644835086,
    '&D@@AE?': 0.08126282079915885,
    '&D@@AK?': 0.14620435623696446,
    '&D@@AM?': 0.0004724582604602259,
    '&D@@AT?': 0.0001718030038037185,
    '&D@@A]?': 8.590150190185926e-05,
    '&D@@BD?': 0.0008160642680676629,
    '&D@@BE?': 0.0001718030038037185,
    '&D@@BH?': 4.295075095092963e-05,
    '&D@@CE?': 0.015805876349942103,
    '&D@@CM?': 0.0001718030038037185,
    '&D@@CR?': 0.00012885225285278888,
    '&D@@CX?': 4.295075095092963e-05,
    '&D@@DD?': 0.0001718030038037185,
    '&D@@DE?': 4.295075095092963e-05,
    '&D@@DH?': 0.00021475375475464814,
    '&D@@ED?': 0.0009449165209204518,
    '&D@@EE?': 0.00038655675855836665,
    '&D@@EH?': 0.0013314732794788185,
    '&D@@EI?': 0.0001718030038037185,
    '&D@@EK?': 0.0012455717775769592,
    '&D@@RE?': 8.590150190185926e-05,
    '&D@@UD?': 4.295075095092963e-05,
    '&D@A?U?': 0.01245571777576959,
    '&D@A?V?': 0.0004295075095092963,
    '&D@A?[?': 0.07396119313750081,
    '&D@A?]?': 0.0012455717775769592,
    '&D@A?^?': 0.00012885225285278888,
    '&D@A@K?': 0.014603255323316073,
    '&D@AAE?': 0.019972099192182277,
    '&D@AAK?': 0.0655428459511186,
    '&D@AAM?': 0.0004295075095092963,
    '&D@AAR?': 4.295075095092963e-05,
    '&D@ABD?': 0.00012885225285278888,
    '&D@ABE?': 4.295075095092963e-05,
    '&D@ABH?': 4.295075095092963e-05,
    '&D@ACE?': 0.013400634296690044,
    '&D@ACF?': 4.295075095092963e-05,
    '&D@ACG?': 1.8395377124773649,
    '&D@ACK?': 0.0413186224147943,
    '&D@ACM?': 0.00038655675855836665,
    '&D@ACX?': 4.295075095092963e-05,
    '&D@ADD?': 0.00025770450570557777,
    '&D@AED?': 0.000343606007607437,
    '&D@AEE?': 0.00012885225285278888,
    '&D@AEH?': 0.0013314732794788185,
    '&D@AEK?': 0.0005154090114111555,
    '&D@ASU?': 4.295075095092963e-05,
    '&D@ATI?': 8.590150190185926e-05,
    '&D@AUH?': 4.295075095092963e-05,
    '&DACG[?': 0.06661661472489185,
    '&DACG]?': 0.001374424030429748,
    '&DACHK?': 0.012369816273867733,
    '&DACJH?': 0.00012885225285278888,
    '&DACKM?': 0.0003006552566565074,
    '&DAE?[?': 0.025813401321508705,
    '&DAE@K?': 0.003221306321319722,
    '&DAEAK?': 0.00025770450570557777,
    '&DAECK?': 0.00459573035174947,
    '&DAGHK?': 0.0016750792870862555,
    '&DAGJH?': 0.00025770450570557777,
    '&DAGRH?': 0.00012885225285278888,
    '&DAH@K?': 8.590150190185926e-05,
    '&DAI@K?': 0.00012885225285278888,
    '&DAOG[?': 0.02065931120739715,
    '&DAOHK?': 0.006528514144541303,
    '&DAOIK?': 0.007473430665461755,
    '&DAOKK?': 0.00227638980039927,
    '&DAOKM?': 4.295075095092963e-05,
    '&DAOPK?': 0.0005583597623620852,
    '&DAP?[?': 0.007988839676872911,
    '&DAP@K?': 0.0015462270342334666,
    '&DAPAK?': 0.0028347495627613554,
    '&DAPCK?': 0.0006013105133130148,
    '&DB?KM?': 0.0005154090114111555,
    '&DB@CM?': 0.00025770450570557777,
    '&DCCG]?': 0.000687212015214874,
    '&DCCKM?': 0.00025770450570557777,
    '&DCEBL?': 4.295075095092963e-05,
    '&DCGG]?': 0.00025770450570557777,
    '&DCGHK?': 0.00012885225285278888,
    '&DCGKM?': 0.00012885225285278888,
    '&DCGRH?': 0.00012885225285278888,
    '&DCGTK?': 4.295075095092963e-05,
    '&DCI@K?': 0.0004295075095092963,
    '&DCOKM?': 8.590150190185926e-05,
    '&DCO]K?': 4.295075095092963e-05,
    '&DGGG[?': 0.0001718030038037185,
    '&DGGHK?': 0.0005583597623620852,
    '&DGGPK?': 0.00021475375475464814,
    '&DGGTD?': 4.295075095092963e-05,
    '&DGH?[?': 0.00038655675855836665,
    '&DGH@K?': 0.0004295075095092963,
    '&DGHCK?': 4.295075095092963e-05,
    '&DGI?[?': 0.0004724582604602259,
    '&DGI@K?': 0.0004295075095092963,
    '&DGIAK?': 8.590150190185926e-05,
    '&DGICK?': 0.0010737687737732407,
    '&DGOG[?': 0.002877700313712285,
    '&DGOHK?': 0.001846882290889974,
    '&DGOKK?': 0.0022334390494483406,
    '&DGOPK?': 0.0008160642680676629,
    '&DGOUH?': 8.590150190185926e-05,
    '&DGOUI?': 4.295075095092963e-05,
    '&DGQ?[?': 0.0017180300380371851,
    '&DGQ@K?': 0.0014173747813806777,
    '&DGQAK?': 0.0009878672718713814,
    '&DGQCK?': 0.0014173747813806777,
    '&DH?JH?': 4.295075095092963e-05,
    '&DH?MH?': 4.295075095092963e-05,
    '&DH?UH?': 8.590150190185926e-05,
    '&DH@SU?': 4.295075095092963e-05,
    '&DOCG[?': 0.021260621720710166,
    '&DOCG]?': 0.002748848060859496,
    '&DOCG^?': 4.295075095092963e-05,
    '&DOCHK?': 0.0031783555703687925,
    '&DOCJH?': 4.295075095092963e-05,
    '&DOCKM?': 0.000343606007607437,
    '&DOCLH?': 0.0001718030038037185,
    '&DOCLL?': 4.295075095092963e-05,
    '&DOCO]?': 0.0001718030038037185,
    '&DOCRH?': 4.295075095092963e-05,
    '&DOCTH?': 0.00012885225285278888,
    '&DOD?[?': 0.008246544182578489,
    '&DOD@K?': 0.00038655675855836665,
    '&DODAK?': 0.0006442612642639444,
    '&DOE?[?': 0.005497696121718992,
    '&DOE@K?': 4.295075095092963e-05,
    '&DOEAK?': 0.001030818022822311,
    '&DOECK?': 0.00025770450570557777,
    '&DOECM?': 0.0001718030038037185,
    '&DOGG]?': 0.00038655675855836665,
    '&DOGHK?': 0.0003006552566565074,
    '&DOGKM?': 8.590150190185926e-05,
    '&DOGLD?': 4.295075095092963e-05,
    '&DOGLH?': 8.590150190185926e-05,
    '&DOGO]?': 4.295075095092963e-05,
    '&DOGRH?': 8.590150190185926e-05,
    '&DOGRK?': 4.295075095092963e-05,
    '&DOGTH?': 0.00025770450570557777,
    '&DOGTK?': 0.00012885225285278888,
    '&DOH?]?': 4.295075095092963e-05,
    '&DOH@K?': 0.00025770450570557777,
    '&DOI@K?': 0.0003006552566565074,
    '&DOICM?': 4.295075095092963e-05,
    '&DOOG[?': 0.004338025846043893,
    '&DOOG]?': 0.0012455717775769592,
    '&DOOG^?': 8.590150190185926e-05,
    '&DOOHK?': 0.0006013105133130148,
    '&DOOIK?': 0.0018039315399390444,
    '&DOOJH?': 4.295075095092963e-05,
    '&DOOKK?': 0.0016321285361353259,
    '&DOOKM?': 0.0004724582604602259,
    '&DOOK]?': 8.590150190185926e-05,
    '&DOOLH?': 4.295075095092963e-05,
    '&DOOOW?': 0.0014603255323316073,
    '&DOOO^?': 4.295075095092963e-05,
    '&DOOP@?': 0.10647491160735455,
    '&DOOPA?': 0.39179675017438004,
    '&DOOPC?': 0.08001724902158189,
    '&DOOPG?': 0.04423927347945752,
    '&DOOPK?': 0.0003006552566565074,
    '&DOOQA?': 0.14152272438331312,
    '&DOOQC?': 0.1282938930904268,
    '&DOOQG?': 0.029593067405190514,
    '&DOOSG?': 0.027832086616202397,
    '&DOOUK?': 4.295075095092963e-05,
    '&DOP?[?': 0.0010737687737732407,
    '&DOP@K?': 0.0007731135171167333,
    '&DOPAK?': 0.004338025846043893,
    '&DOPCK?': 0.000343606007607437,
    '&DOQ?[?': 0.0021045867965955515,
    '&DOQ@K?': 0.0014173747813806777,
    '&DOQAK?': 0.0017180300380371851,
    '&DOQCK?': 0.003307207823221581,
    '&DOQEH?': 8.590150190185926e-05,
    '&DOQEK?': 4.295075095092963e-05,
    '&DP?JH?': 4.295075095092963e-05,
    '&DPABH?': 4.295075095092963e-05,
    '&DPACC?': 0.25392483962189594,
    '&DPACG?': 0.6706759760987661,
    '&DPADE?': 4.295075095092963e-05,
  })
# ---
# name: test_random_size5u
  dict({
    'D?{': 43.05637404642059,
    'D@s': 42.929204380537364,
    'D@{': 1.6415429662005967,
    'DBw': 0.24198151424972214,
    'DB{': 0.03672588893257034,
    'DDW': 10.88183068708693,
    'DD[': 0.8912303520356029,
    'DFw': 0.0004634181568778592,
    'DF{': 7.72363594796432e-05,
    'DJk': 0.007376072330305926,
    'DJ{': 0.0032439270981450144,
    'DN{': 0.0001158545392194648,
    'DR{': 0.0002703272581787512,
    'D`[': 0.2851180210191029,
    'D`{': 0.004402472490339662,
    'Dd[': 0.0043252361308600195,
    'DqK': 0.015678980974367568,
    'Dr[': 3.86181797398216e-05,
  })
# ---
